--- a/schelude-backend/.env.example
+++ b/schelude-backend/.env.example
@@ -1,17 +1,22 @@
-# Server Configuration
-PORT=3000
-NODE_ENV=development
-
-# MongoDB
+# Database Configuration
 MONGODB_URI=mongodb://localhost:27017/schedule-db
 
-# JWT
-JWT_SECRET=your-secret-key-change-this-in-production
+# JWT Configuration
+# IMPORTANT: Use a strong secret (min 32 characters) in production
+JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long-please
 JWT_EXPIRES_IN=7d
 
-# Telegram Bot
-TELEGRAM_BOT_TOKEN=your-bot-token-here
-TELEGRAM_WEBHOOK_URL=https://yourdomain.com/api/webhooks/telegram
+# Admin Credentials
+# IMPORTANT: Must contain uppercase, lowercase, and numbers (min 8 characters)
+ADMIN_PASSWORD=YourSecureP@ssw0rd123
+
+# Webhook Security
+# IMPORTANT: Generate a strong random key (min 32 characters)
+WEBHOOK_API_KEY=your-webhook-api-key-min-32-chars-random-string-here
+
+# Server Configuration
+PORT=5000
+NODE_ENV=development
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
