--- a/schelude-frontend/.env
+++ b/schelude-frontend/.env
@@ -1,3 +1,5 @@
 VITE_API_URL=http://localhost:3000/api
 VITE_APP_NAME=Smart Schedule
 VITE_APP_UNIVERSITY=SurGU
+LM_STUDIO_URL=http://localhost:1234/v1/chat/completions  
+  AI_MODEL=qwen/qwen3-vl-4b    
