--- a/schelude-frontend/package.json
+++ b/schelude-frontend/package.json
@@ -10,28 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mui/material": "^5.15.0",
-    "@mui/icons-material": "^5.15.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "react-router-dom": "^6.21.0",
-    "axios": "^1.6.2",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
     "@tanstack/react-query": "^5.17.0",
     "@tanstack/react-query-devtools": "^5.17.0",
-    "date-fns": "^3.0.0",
+    "axios": "^1.6.2",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
-    "yup": "^1.3.3",
-    "zustand": "^4.4.7",
-    "recharts": "^2.10.3",
+    "framer-motion": "^10.17.0",
+    "react": "^18.2.0",
     "react-big-calendar": "^1.10.0",
-    "framer-motion": "^10.17.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "recharts": "^2.10.3",
+    "yup": "^1.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
     "@types/react-big-calendar": "^1.8.9",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
