--- a/telegram_bot/.env
+++ b/telegram_bot/.env
@@ -1,4 +1,4 @@
-TELEGRAM_BOT_TOKEN=8396693268:AAFLNG9JvJamUZvw1AvK54NnwthRBE6HpyM
+TELEGRAM_BOT_TOKEN=
 BACKEND_URL=http://localhost:3000
 ADMIN_USER_IDS=5739122065
 WEBHOOK_API_KEY=YourSecureP@ssw0rd123456YourSecureP@ssw0rd123456
